2010-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/muxers/muxers.xml:
	Remove non-existent mkv.py from bundle.

2010-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	reviewed by: Xavier Queralt

	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/vp8/__init__.py:
	* flumotion/component/encoders/vp8/vp8.py:
	* flumotion/component/encoders/vp8/vp8.xml:
	* flumotion/component/encoders/vp8/wizard.glade:
	* flumotion/component/encoders/vp8/wizard_gtk.py:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/muxers/muxers.xml:
	* flumotion/component/muxers/webm.py:
	* flumotion/component/muxers/wizard_gtk.py:
	* flumotion/component/muxers/webm.py (added):
	* flumotion/component/encoders/vp8 (added):
	* flumotion/component/encoders/vp8/vp8.py (added):
	* flumotion/component/encoders/vp8/__init__.py (added):
	* flumotion/component/encoders/vp8/wizard.glade (added):
	* flumotion/component/encoders/vp8/wizard_gtk.py (added):
	* flumotion/component/encoders/vp8/vp8.xml (added):
	WebM/VP8 support, yay!

2010-06-01  Julien Le Goff  <jlegoff@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/feedcomponent.py:
	Abstract out the link pad creation for muxers.

2010-05-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/converters/overlay/overlay.py:
	Force AYUV format in the 'alphacolor' source caps because videomixer needs
	the same colorspace in all the sink pads. Also add 'endianness' to
	the 'appsrc' source pad caps, needed by 'alphacolor' to negotiate caps
	properly.
	Fixes #1423

2010-05-28  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/admin/gtk/workerlist.py:
	Fix wizzard issue when displaying long worker names.

2010-05-28  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/test/test_pb.py:
	Removed debug print.

2010-05-27  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
